tests/baselines/reference/for-of32.errors.txt
for-of32.ts(1,10): error TS7022: 'v' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== for-of32.ts (1 errors) ====
    for (var v of v) { }
             ~
!!! error TS7022: 'v' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.